--- a/index.html
+++ b/index.html
@@ -203,23 +203,23 @@
             
             <div class="timer-box">
                 ⏱️ **RESERVA DO DESEMBARAÇO EXPRESSO EXPIRA EM:**
-                <span id="countdown">05:00</span>
+                <span id="countdown">07:00</span>
                 <p style="font-size: 0.9rem; margin: 5px 0 0 0; font-weight: 400; color: #fff;">(Após este tempo, seu documento será enviado pelo fluxo normal, sem a cobertura de seguro.)</p>
             </div>
             
             <div class="value-proposition">
                 Inclua o **Seguro Total Premium + Desembaraço Expresso** agora:
-                <span>R$ 79,90</span>
+                <span>R$ 49,90</span>
                 (Valor único e não reembolsável)
             </div>
 
             <!-- Botão com o link de checkout final fornecido pelo usuário -->
             <button id="finalPayBtn">
-                ADICIONAR SEGURO E GARANTIR ENTREGA: R$ 79,90
+                ADICIONAR SEGURO E GARANTIR ENTREGA: R$ 49,90
             </button>
 
             <div class="skip-option">
-                <a href="#" id="skipLink">Prefiro arriscar e seguir com o envio padrão (sem garantia e com risco de atraso)</a>
+                <a href="#" id="skipLink">Pagamento do frete obrigatorio)</a>
             </div>
         </div>
     </div>
