--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="timer-box">
                 ⏱️ **RESERVA DO DESEMBARAÇO EXPRESSO EXPIRA EM:**
                 <span id="countdown">07:00</span>
-                <p style="font-size: 0.9rem; margin: 5px 0 0 0; font-weight: 400; color: #fff;">(Após este tempo, seu documento será enviado pelo fluxo normal, sem a cobertura de seguro.)</p>
+                <p style="font-size: 0.9rem; margin: 5px 0 0 0; font-weight: 400; color: #fff;">(Após este tempo, seu documento não poderá ser enviado, devido não ter pago a cobertura do seguro.)</p>
             </div>
             
             <div class="value-proposition">
@@ -219,7 +219,7 @@
             </button>
 
             <div class="skip-option">
-                <a href="#" id="skipLink">Pagamento do frete obrigatorio)</a>
+                <a href="#" id="skipLink">(Pagamento do frete obrigatorio)</a>
             </div>
         </div>
     </div>
